# coda-stage-3

./: CMakeLists.txt  Makefile  build.sh  main  main.cu
cuda-fixnum/array/: fixnum_array.cu  fixnum_array.h
libff/: CMakeLists.txt  main.cpp
libff/common/default_types/: ec_pp.hpp
src/: constants.hpp  fq2_mul.cu  fq3_mul.cu  fq_mul.cu  fq_mul.hpp  gpu_constants.cuh  gpu_fq.cuh  gpu_fq2.cuh  gpu_fq3.cuh  gpu_g1.cuh  gpu_g2.cuh  gpu_params.cu  gpu_params.cuh  io.cpp  io.hpp  main.cu  params.cu  params.hpp  reduce.hpp  reduce_g1.cu  reduce_mnt4_g2.cu  reduce_mnt6_g2.cu  retrieve_utils.cu  retrieve_utils.cuh  stage0.cpp  stage1.cpp  stage2.cpp  stage3.cpp  stages.hpp  utils.cpp  utils.hpp
